fix grid spacing

--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,9 @@ section {
   padding: 1rem;
   margin: 0;
   text-align: center;
-  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0,), rgba(0, 0, 0, 0.5));
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
+  transition: all .2s linear;
 }
 
 .hover-box:hover h2,
@@ -38,13 +39,11 @@ section {
 }
 
 .hover-box img {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   filter: grayscale(100%);
-  transition: all .2s linear;
-}
-
-.hover-box-caption {
-  background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0,), rgba(0, 0, 0, 0.5));
-  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.9);
   transition: all .2s linear;
 }
 
